<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imgViewRegisterTravel"
        android:layout_width="274dp"
        android:layout_height="246dp"
        android:contentDescription="@string/imgTravelDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/travelpic" />

    <EditText
        android:id="@+id/editTxtRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/editTxtUserRegister"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewRegisterTravel" />

    <EditText
        android:id="@+id/editTxtRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/editTxtRegisterPasswordLogin"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtRegister" />

    <EditText
        android:id="@+id/editTxtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/registerName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtRegisterPassword"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/registerbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtName"
        app:layout_constraintVertical_bias="0.25" />
</androidx.constraintlayout.widget.ConstraintLayout>