<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcities"
    tools:context=".RatingActivity">


    <TextView
        android:id="@+id/textViewRatingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="#B2FFFFFF"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/ratingTitle"
        android:textColor="#0288D1"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RatingBar
        android:id="@+id/appRatingBar"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#8D1B4150"
        android:contentDescription="@string/ratingdescription"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:rating="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRatingTitle" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:background="@color/purple_700"
        android:backgroundTint="#FFFFFF"
        android:padding="10dp"
        android:text="@string/submitRating"
        android:textColor="#0288D1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appRatingBar" />

    <RelativeLayout
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitButton"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavView_Bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CDCBCB"
            app:menu="@menu/bottom_navigation_menu">


        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>